--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -297,11 +297,11 @@
 				  <div class="row">
 					<div class="column">
 					  <img src="images/Task4/CBdragon_angle_0.01.png" width="480px" style="margin: 5px 5px 5px 5px;">
-					  <figcaption>aperture 0.01 (at an angle)</figcaption>
+					  <figcaption>aperture 0.01 (at an angle) and -4.5 for focal distance</figcaption>
 					</div>
 					<div class="column">
 					  <img src="images/Task4/CBdragon_angle_0.1.png" width="480px" style="margin: 5px 5px 5px 5px;">
-					  <figcaption>aperture 0.1 (at an angle)</figcaption>
+					  <figcaption>aperture 0.1 (at an angle) and -4.5 for focal distance</figcaption>
 					</div>
 				  </div>
 
