minor add to task4

--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -245,8 +245,9 @@
 					  <img src="images/focal/dragon6.png" width="480px" style="margin: 5px 5px 5px 5px;">
 					  <figcaption>focal distance 6</figcaption>
 					</div>
+					<p>In the first and last images, the plane of focus is in front of the object and behind the object respectively. They both create a similar effect in the rendered image, which is that the entire dragon is out of focus, and the only difference is that the latter image has the far wall in focus.</p>
 
-				  <p>Here are all the images in a row to create the focus stack effect -- you can see how the focus travels from the front of the dragon the the back:</p>
+				  <p>Here are all the images in a row to create the focus stack effect -- you can see how the focus travels from being near the front of the dragon towards the back, while the other parts of the object are out of focus.</p>
 				  <div class="row">
 					<div class="column">
 					  <img src="images/focal/dragon4p5.png" width="250px" style="margin: 5px 5px 5px 5px;">
@@ -305,7 +306,7 @@
 					</div>
 				  </div>
 
-				  <p>Note how a larger aperture makes the image appear softer. Aperture combined with focal distance create very interesting depth of field effects when rendering scenes, such the bokeh in the angled aperture 0.1 image.</p>
+				  <p>Note how a larger aperture makes the image appear softer, while still keeping everything at the plane of focus sharp and in focus. Aperture combined with focal distance create very interesting depth of field effects when rendering scenes, such the bokeh in the angled aperture 0.1 image. Also, these two images show how the smaller the aperture gets, the closer the image becomes to that rendered using a pinhole camera model.</p>
 
         <hr class="divider">
 
